feat(favorites): split add panel and list panel; scrolling list; grey round remove icon; handle display without @; cleanup styles (20251106-115228)

--- a/web/index.html
+++ b/web/index.html
@@ -73,14 +73,19 @@
       <ul id="sports-list" class="bots-list"></ul>
     </aside>
 
-    <!-- Favorites right sidebar -->
-    <aside class="favorites-side glass">
-      <div class="favorites-title">Favorites</div>
+    <!-- Add to favorites (right, fixed) -->
+    <aside class="fav-add-side glass">
+      <div class="favorites-title">Add to favorites</div>
       <form id="favorites-form" class="favorites-form">
-        <input id="fav-name" placeholder="Name" />
-        <input id="fav-address" placeholder="0x..." />
+        <input id="fav-name" placeholder="Name or username" />
+        <input id="fav-address" placeholder="0x... or profile link" />
         <button type="submit">Add</button>
       </form>
+    </aside>
+
+    <!-- Favorites list (right, below add panel) -->
+    <aside class="favorites-side glass">
+      <div class="favorites-title">Favorites</div>
       <ul id="favorites-list" class="favorites-list"></ul>
     </aside>
 
